--- a/spectral/index.html
+++ b/spectral/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Alpacas Are Cool</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -55,14 +55,15 @@
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
 
-				<!-- One -->
+				<!-- <ul class="icons major">...</ul> -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>With Alpacas, you have a friend indeed. Here are some fun facts about our<br />
+								South American Camelid friends <h2>With Alpacas, you have a friend indeed.<br/>Here are some fun facts about our South American Camelid friends</h2>
+					
+								<p>From their water and flame resistant fleece to their ability to guard<br />
+								chickens, alpacas are excellent, ancient, domesticated animals</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -75,21 +76,37 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/alpaca01.jpg" alt="" /></div><div class="content">
+								<h2>Alpacas are ancient
+									Alpacas grow high quality<br />
+								hypoallergenic fleece
+							Alpaca fleece is flame resistant
+							Alpaca fleece comes in <br/> a rainbow of hues Alpacas are excellent<br/>guards for chickens</h2>
+								<p>Alpacas were domesticated by the Incas more than 6,000 years ago and raised for their
+exquisite fleece. Due to its quality and all of its superhero characteristics, alpaca fibre
+was reserved exclusively for the elite and nobility.
+Alpaca fibre is much like sheep’s wool, but warmer and not itchy. It is lacking in
+lanolin, which makes it hypoallergenic and also allows it to be processed without the
+need for high temperatures or harsh chemicals in washing.
+Alpaca fibre meets the standards of the U.S. Consumer Product Safety Commission's
+rigid testing specifications as a Class 1 fibre for use in clothing and furnishings.
+Alpaca fiber comes in 22 colors and hundreds of shades, from white to light rose gray to
+dark fawn, in addition to the blends that can be made from those, thus minimizing the
+need for pollution-intensive dying.
+Alpacas have been used as chicken and sheep guards for over 17 years in Australia.
+They quickly become very protective of their flocks and will chase foxes and other
+predators away if they try to approach. </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/alpaca02.jpg" alt="" /></div><div class="content">
 								<h2>Tortor dolore feugiat<br />
 								elementum magna</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/alpaca03.jpg" alt="" /></div><div class="content">
 								<h2>Augue eleifend aliquet<br />
 								sed condimentum</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
